--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.41.2",
-    "sequelize-cli": "^5.3.0"
+    "sequelize-cli": "^5.3.0",
+    "stripe": "^6.17.0"
   }
 }
