--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "faker": "^4.1.0",
+    "markdown": "^0.5.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.7.1",
